@startuml

Class Anime{

    title: String
    anilist_id: int
    episodes: int
    type: string
    progress: int
    start_date: string
    coverimage: string
    status: String
    Score: int
}

Class Manga{

    title: String
    anilist_id: int
    episodes: int
    type: string
    progress: int
    start_date: string
    status: String
    coverimage: string
    Score: int

}

Class Agenda{

    addContent()
    removeContent()

}

class Database{

    checkRegisters()
    addRow()
    checkContents()
    remove_row()
    countRows()
    updateRowScore()
    updateRowProgress()
    updateRowStatus()
    updateAllRowsIndexes()
    getRows()
    getRandomRow()
    getRowEpisodes()
    getRowProgress()

}

class Api{

    titleSearch()
    getResults()
    previewData()
    getData()
    recommendation()

}

class Recommendations{

    getRecommendation()

}

class Customization{

    changeScore()
    changeProgress()
    changeStatus()

}

Class File{

    saveDatabaseCopy()
    deleteAllData()
    overwriteDatabase()
    defaultPreference()
    preferences()
    getPreference()
    checkDatabaseExistence()

}



Recommendations "4" --o "1" Agenda: are recommended in >
Api <|-- Recommendations
Database <|-- Recommendations
Database <|-- Customization
File --- Agenda
Database <|-- Agenda
Manga "*"--- "1" Agenda: goes in >
Anime "*" --- "1" Agenda: goes in >
Manga --- Api
Anime --- Api


@enduml
